--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for WordList-Phrase-FR-Proverb-ProverbesFrancais
 
-0.01    2016-02-04 (PERLANCAR) (unreleased)
+0.01    2016-02-10 (PERLANCAR)
 
         - First release.
